--- a/src/app/Profile/organisation/organisation.component.html
+++ b/src/app/Profile/organisation/organisation.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-6 text-md-start">
                 <h4 class="text-primary">Profile</h4>
             </div>
-        </div> 
+        </div>
         <div id="common-from" class="row scroll-nav">
             <div class="col-md-12 mt-3 mb-3">
                 <div class="card">
@@ -13,16 +13,20 @@
                         <!-- <p> </p> -->
                     </div>
                     <div class="card-content">
-                        <div class="card-body"> 
+                        <div class="card-body">
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="row g-2">
                                         <div class="col-4">
-                                            <div class="form-group mb-4 floating-label">
+                                            <mdb-form-control>
+                                                <input mdbInput type="text" id="form1" class="form-control" required />
+                                                <label mdbLabel class="form-label" for="form1">First name</label>
+                                            </mdb-form-control>
+                                            <!-- <div class="form-group mb-4 floating-label">
                                                 <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                                 <input type="text" class="form-control" placeholder=" " value="">
                                                 <label for="">RegNo</label>
-                                            </div>
+                                            </div> -->
                                         </div>
                                         <div class="col-8">
                                             <div class="form-group mb-4 floating-label">
@@ -46,12 +50,12 @@
                                         <label for="">HelpLine No 1</label>
                                     </div>
                                 </div>
-                                 <div class="col-md-3">
+                                <div class="col-md-3">
                                     <div class="form-group mb-4 floating-label">
                                         <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                         <input type="text" class="form-control" placeholder=" " value="">
                                         <label for="">HelpLine No 2</label>
-                                    </div> 
+                                    </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group mb-4 floating-label">
@@ -104,63 +108,63 @@
                                     </div>
                                 </div>
                                 <div class="col-md-3">
-                                     <div class="form-group mb-4 floating-label">
+                                    <div class="form-group mb-4 floating-label">
                                         <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                         <input type="text" class="form-control" placeholder=" " value="">
                                         <label for="">State</label>
                                     </div>
                                 </div>
-                                 <div class="col-md-3">
-                                     <div class="form-group mb-4 floating-label">
+                                <div class="col-md-3">
+                                    <div class="form-group mb-4 floating-label">
                                         <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                         <input type="text" class="form-control" placeholder=" " value="">
                                         <label for="">City</label>
                                     </div>
                                 </div>
-                                 <div class="col-md-3">
-                                     <div class="form-group mb-4 floating-label">
+                                <div class="col-md-3">
+                                    <div class="form-group mb-4 floating-label">
                                         <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                         <input type="text" class="form-control" placeholder=" " value="">
                                         <label for="">Zip Code</label>
                                     </div>
                                 </div>
-                                 <div class="col-md-3">
-                                     <div class="form-group mb-4 floating-label">
+                                <div class="col-md-3">
+                                    <div class="form-group mb-4 floating-label">
                                         <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                         <input type="text" class="form-control" placeholder=" " value="">
                                         <label for="">Organisation Logo</label>
                                     </div>
                                 </div>
-                                 <div class="col-md-3">
-                                     <div class="form-group mb-4 floating-label">
+                                <div class="col-md-3">
+                                    <div class="form-group mb-4 floating-label">
                                         <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                         <input type="text" class="form-control" placeholder=" " value="">
                                         <label for="">Owner First Name</label>
                                     </div>
                                 </div>
-                                 <div class="col-md-3">
-                                     <div class="form-group mb-4 floating-label">
+                                <div class="col-md-3">
+                                    <div class="form-group mb-4 floating-label">
                                         <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                         <input type="text" class="form-control" placeholder=" " value="">
                                         <label for="">Owner Middle Name</label>
                                     </div>
                                 </div>
-                                 <div class="col-md-3">
-                                     <div class="form-group mb-4 floating-label">
+                                <div class="col-md-3">
+                                    <div class="form-group mb-4 floating-label">
                                         <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                         <input type="text" class="form-control" placeholder=" " value="">
                                         <label for="">Owner Last Name</label>
                                     </div>
                                 </div>
-                                 <div class="col-md-3">
-                                     <div class="form-group mb-4 floating-label">
+                                <div class="col-md-3">
+                                    <div class="form-group mb-4 floating-label">
                                         <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                         <input type="text" class="form-control" placeholder=" " value="">
                                         <label for="">Owner Last MobileNo</label>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
-                                     <div class="form-group mb-4 floating-label">
+                                    <div class="form-group mb-4 floating-label">
                                         <a class="clera-filed" title="Clear All"><i class="fal fa-times me-2"></i></a>
                                         <input type="text" class="form-control" placeholder=" " value="">
                                         <label for="">Remarks</label>
@@ -175,6 +179,6 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
     </section>
 </main>
